--- a/app/src/main/res/layout/item_story.xml
+++ b/app/src/main/res/layout/item_story.xml
@@ -1,26 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:background="@color/black"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <ImageView
-            android:id="@+id/iv_story"
-            android:adjustViewBounds="true"
-            android:scaleType="centerCrop"
-            android:src="@mipmap/ic_launcher"
-            android:layout_width="match_parent"
+        android:layout_height="300dp">
+            <com.google.android.material.imageview.ShapeableImageView
+                android:padding="15dp"
+                android:layout_width="match_parent"
+                android:id="@+id/iv_story"
+                android:scaleType="centerCrop"
+                app:shapeAppearanceOverlay="@style/circle"
+                android:src="@drawable/img5"
+                android:layout_height="match_parent">
+            </com.google.android.material.imageview.ShapeableImageView>
+            <ImageView
+                android:id="@+id/plus"
+                android:layout_margin="30dp"
+                android:src="@drawable/ic_outline_add_circle_24"
+                android:layout_width="30dp"
+                android:layout_height="30dp"/>
+        <TextView
+            android:id="@+id/sonlar"
+            android:textSize="20sp"
+            android:textColor="@color/white"
+            android:gravity="center"
+            android:text="1"
+            android:background="@drawable/prastoy"
+            android:layout_gravity="end"
+            android:layout_margin="30dp"
+            android:layout_width="36dp"
+            android:layout_height="36dp"/>
+            <TextView
+                android:id="@+id/tv_name"
+                android:layout_margin="20dp"
+                android:layout_gravity="bottom"
+                android:gravity="bottom"
+                android:textSize="25sp"
+            android:textColor="@color/white"
+            android:text="Add to Story"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
-        <TextView
-            android:text="Abror"
-            android:layout_gravity="bottom"
-            android:textSize="26sp"
-            android:id="@+id/tv_name"
-            android:gravity="center"
-            android:maxLines="1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
     </FrameLayout>
 </LinearLayout>
