--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.LayoutManagers" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.LayoutManagers" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimaryVariant">#000000</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
@@ -14,6 +14,9 @@
         <!-- Customize your theme here. -->
     </style>
     <style name="circle">
+        <item name="cornerSize">10%</item>
+    </style>
+    <style name="circle1">
         <item name="cornerSize">50%</item>
     </style>
 </resources>
